# llm-playground

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
playground/: __init__.py  app.py  cli.py  index.html
playground/static/css/: dashboard.css  observability.css
playground/static/js/: dashboard.js
playground/static/js/modules/: metrics-poller.js  metrics-registry.js  observability.js
playground/static/templates/: observability.html
vllm_playground/: app.py  cli.py  index.html
vllm_playground/static/css/: observability.css
vllm_playground/static/js/: dashboard.js
vllm_playground/static/js/modules/: metrics-poller.js  observability.js
vllm_playground/static/templates/: observability.html
