[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllm-playground"
dynamic = ["version"]
description = "A focused observability dashboard for vLLM Prometheus metrics"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "micytao" }
]
keywords = [
    "vllm",
    "llm",
    "ai",
    "machine-learning",
    "inference",
    "observability",
    "monitoring",
    "prometheus"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
vllm-playground = "playground.cli:main"

[project.urls]
Homepage = "https://github.com/gq112/llm-playground"
Documentation = "https://github.com/gq112/llm-playground#readme"
Repository = "https://github.com/gq112/llm-playground"
Issues = "https://github.com/gq112/llm-playground/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/playground",
]

[tool.hatch.build.targets.wheel]
packages = ["playground"]

[tool.hatch.version]
path = "playground/__init__.py"

[tool.hatch.build]
include = [
    "playground/**/*.py",
    "playground/**/*.html",
    "playground/**/*.css",
    "playground/**/*.js",
    "playground/**/*.json",
    "playground/**/*.png",
    "playground/**/*.jpeg",
    "playground/**/*.jpg",
    "playground/**/*.gif",
    "playground/**/*.svg",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
